# New-Chatbot

./: .env.example  .gitignore  SPEC.md  main.py  pyproject.toml
RAG_샘플데이터/: README.md  테스트질문_단계별.md
RAG_샘플데이터/01_규정/: 국내출장여비_지급기준.md  한세대학교_학사운영규정.md
RAG_샘플데이터/02_지침/: 성적처리_업무지침.md
RAG_샘플데이터/03_업무매뉴얼/: 수강신청_업무매뉴얼.md
RAG_샘플데이터/04_기안문_결재공문/: 기안문_계절학기개설계획.md  기안문_국내출장신청.md
RAG_샘플데이터/05_계획서_결과보고서/: 결과보고서_하계계절학기운영.md  계획서_하계계절학기운영.md
RAG_샘플데이터/06_회의록/: 회의록_2025-07_학사팀정례.md
RAG_샘플데이터/07_FAQ/: 학사_FAQ.md
src/rag/: chain.py  embeddings.py  ingest.py  retriever.py  store.py
src/rag/api/: admin.py  query.py
templates/: admin.html  base.html  index.html
tests/: test_admin_cleanup.py  test_chain.py  test_ingest.py  test_store.py
